<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter_task_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/title"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/label"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/importanceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleInput"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />

    <RadioGroup
        android:id="@+id/importanceGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/low_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/normal_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/high_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />
    </RadioGroup>

    <TextView
        android:id="@+id/importanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/task_importance"
        app:layout_constraintBottom_toTopOf="@+id/importanceGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toTopOf="@+id/descriptionInput"
        app:layout_constraintEnd_toEndOf="@+id/label"
        app:layout_constraintStart_toEndOf="@+id/titleInput"
        app:layout_constraintTop_toBottomOf="@+id/label" />

</androidx.constraintlayout.widget.ConstraintLayout>